# DocYouMeant

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
config/: app_config.json  models.json
config/models/: edge.json
models/: models.json
models/dict/: en_dict.txt
scripts/: README.md  client.py  download_models.py  models.json  requirements.txt  setup_deps.ps1  setup_deps.sh
src/: lib.rs  main.rs
src/document/: bounds.rs  error.rs  layout_box.rs  mod.rs  region.rs  table.rs  text_box.rs
src/document/analysis/: mod.rs  pipeline.rs  result.rs
src/document/content/: csv.rs  excel.rs  image.rs  mod.rs  pdf.rs  text.rs  word.rs
src/inference/: crnn.rs  dbnet.rs  error.rs  lcnet.rs  mod.rs  phi4mini.rs  rtdetr.rs  session_pool.rs  singleton.rs
src/inference/tasks/: key_value_pair_extraction_task.rs  language_detection_task.rs  mod.rs  question_and_answer_task.rs
src/server/: error.rs  handlers.rs  mod.rs  models.rs
src/utils/: box_utils.rs  config.rs  error.rs  image_utils.rs  lang_utils.rs  mod.rs  serialization_utils.rs
tests/: analysis_tests.rs  box_utils_tests.rs  config_tests.rs  content_tests.rs  document_tests.rs  image_utils_tests.rs  mod.rs
tests/fixtures/csv/: test.csv
tests/fixtures/docx/: test.docx
tests/fixtures/txt/: test.txt
tests/fixtures/xlsx/: test.xlsx
