[package]
name = "docyoumeant"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16.1"
thiserror = "2.0.17"
ort = { version = "2.0.0-rc.10", features = ["load-dynamic", "cuda", "tensorrt", "half"] }
half = "2.4.1"
image = "0.25.9"
imageproc = "0.25.0"
geo = "0.31.0"
geo-clipper = "0.9.0"
pdfium-render = { version = "0.8.36", features = ["pdfium_7350"] }
tempfile = "3.23.0"
docx-rs = "0.4.18"
calamine = "0.31.0"  
csv = "1.4.0" 
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bytes = "1.11.0"
mime = "0.3.17"
base64 = "0.22.1"
tokenizers = "0.21.0"
once_cell = "1.20.2"



